# Monsteer

./: .gitexternals  .gitignore  .gitsubprojects  .travis.yml  AUTHORS.txt  CMakeLists.txt  LICENSE.txt  README.md
CMake/: CPackConfig.cmake  Monsteer.cmake
apps/: CMakeLists.txt  monsteer_spike_receiver.cpp  music_proxy.cpp  music_spike_writer.cpp  nrp_proxy.cpp  tests.music
apps/monsteerGUI/: CMakeLists.txt  monsteerGUI.cpp
doc/: Changelog.md  TechnicalOverview.md  UserGuide.md
doc/images/: Steering.eps  Steering.graffle
doc/presentations/: NEST_meeting.odp  isc.odp
examples/: CMakeLists.txt
examples/nest/: CMakeLists.txt  minimal.py  minimal_steered.py  nest2music_proxy.music  nest2music_proxy_with_steering.music  send_generator.py
monsteer/: CMakeLists.txt  types.h
monsteer/plugin/: CMakeLists.txt  endOfStream.fbs  spikeReport.cpp  spikeReport.h  spikes.fbs  vocabulary.cpp  vocabulary.h
monsteer/python/: CMakeLists.txt  Nesteer.py  __init__.py  monsteer.cpp  simulator.cpp
monsteer/python/bindings/: CMakeLists.txt  monsteer.cpp  simulator.h  spikeReportReader.cpp  spikeReportReader.h  spikeReportWriter.cpp  spikeReportWriter.h  spikes.cpp  spikes.h
monsteer/qt/: CMakeLists.txt  GeneratorModel.cpp  GeneratorModel.h  GeneratorPropertiesModel.cpp  GeneratorPropertiesModel.h  PropertyEditDelegate.cpp  PropertyEditDelegate.h  SteeringWidget.cpp  SteeringWidget.h  SteeringWidget.ui  files.cmake  nestData.cpp  nestData.h  types.h
monsteer/qt/gui/: SteeringWidget.ui
monsteer/steering/: files.cmake  playbackState.fbs  simulator.cpp  simulator.h  simulatorPlugin.h  stimulus.fbs  vocabulary.cpp  vocabulary.h
monsteer/steering/plugin/: nestSimulator.cpp  nestSimulator.h
monsteer/streaming/: files.cmake  spikeReportReader.cpp  spikeReportReader.h  spikeReportWriter.cpp  spikeReportWriter.h  spikes.cpp  spikes.fbs  spikes.h  vocabulary.cpp  vocabulary.h
monsteer/streaming/detail/: spikes.h
monsteer/streaming/plugin/: spikeReport.cpp  spikeReport.h
nrp/: CMakeLists.txt
nrp/python/: CMakeLists.txt  Nesteer.py  __init__.py
nrp/python/bindings/: CMakeLists.txt  nrp.cpp  simulator.cpp  simulator.h
nrp/steering/: files.cmake  proxyStatusMsg.fbs  runSimTrigger.fbs  simulator.cpp  simulator.h  simulatorPlugin.h  statusRequestMsg.fbs  vocabulary.cpp  vocabulary.h
nrp/steering/plugin/: nestSimulator.cpp  nestSimulator.h
tests/: CMakeLists.txt  simulator.cpp  spikeReportReaderWriter.cpp  spikeStreamReport.cpp
